fixed text wrap error

--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,10 @@ html {
   box-sizing: inherit;
 }
 
+h1 {
+  display: inline;
+  text-align: center;
+}
 span {
   color: #333;
 }
@@ -25,4 +29,5 @@ div a {
 
 img {
   max-width: 25em;
+  float: left;
 }
